--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,5 +3,10 @@ name = "FedMDRS"
 version = "0.1.0"
 dependencies = [
   "numpy",
-  "networkx"
+  "networkx",
+  "matplotlib",
+  "scikit-learn"
 ]
+
+[tool.setuptools]
+py-modules = []
