--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ dependencies = [
   "numpy",
   "networkx",
   "matplotlib",
-  "scikit-learn"
+  "scikit-learn",
+  "optuna"
 ]
 
 [tool.setuptools]
